--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body class="body">
   <div class="heading">
-    <h1>Takepoint Stats+</h1>
+    <h1>Takepoint Stats+ (Under Construction)</h1>
     <input type="text" placeholder="Username"/>
     <button class="btn" type="button" onclick="search()" id="searchButton">Search</button>
     <script src="thing.js"></script>
