--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Takepoint Stats+ (Under Construction)</h1>
     <input type="text" placeholder="Username"/>
     <button class="btn" type="button" onclick="search()" id="searchButton">Search</button>
-    <script src="thing.js"></script>
+    <script src="stats.js"></script>
   </div>
 </body> 
