--- a/index.html
+++ b/index.html
@@ -4,13 +4,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link href="style.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Orbitron:900" rel="stylesheet"/>
-    
 </head>
+
 <body class="body">
   <div class="heading">
-    <h1>Takepoint Stats+ (Under Construction)</h1>
+    <h1>Takepoint Stats+</h1>
     <input type="text" placeholder="Username"/>
     <button class="btn" type="button" onclick="search()" id="searchButton">Search</button>
     <script src="stats.js"></script>
+  </div>
+  <div class="container" id="pageContainer">
+    <table>
+      <h2 class="leaderboardType">Most Kills</h2>
+      <thead>
+        <tr>
+				  <th class="border-2px">Rank</th>
+				  <th class="border-2px">Username</th>
+				  <th class="border-2px">Kills</th>
+			  </tr>
+      </thead>
+      <tbody data-link="row" class="rowlink">
+        <tr>
+    <td>1</td>
+    <td><a>Fortuna</a></td>
+                <td>100,778.00</td>
+            </tr>
+        <tr>
+    <td>2</td>
+    <td><a>Guzman11</a></td>
+                <td>92,256.00</td>
+            </tr>
+        <tr>
+    <td>3</td>
+    <td><a>Pureskillz</a></td>
+                <td>73,778.00</td>
+            </tr>
+        <tr>
+    <td>4</td>
+    <td><a>Guest0</a></td>
+                <td>68,802.00</td>
+            </tr>
+        <tr>
+    <td>5</td>
+    <td><a>penetieso</a></td>
+                <td>67,669.00</td>
+            </tr>
+        <tr>
+    <td>6</td>
+    <td><a>CaasPeer07</a></td>
+                <td>66,973.00</td>
+            </tr>
+        <tr>
+    <td>7</td>
+    <td><a>oliqq</a></td>
+                <td>64,262.00</td>
+            </tr>
+        <tr>
+    <td>8</td>
+    <td><a>olq</a></td>
+                <td>64,097.00</td>
+            </tr>
+        <tr>
+    <td>9</td>
+    <td><a>LinnaWinner</a></td>
+                <td>63,632.00</td>
+            </tr>
+        <tr>
+    <td>10</td>
+    <td><a>EvoZocker</a></td>
+                <td>63,332.00</td>
+            </tr>
+        <tr>
+    <td>11</td>
+    <td><a>SXTRND</a></td>
+                <td>62,914.00</td>
+            </tr>
+        <tr>
+    <td>12</td>
+    <td><a>nder</a></td>
+                <td>59,844.00</td>
+            </tr>
+        <tr>
+    <td>13</td>
+    <td><a>DIEorLIE</a></td>
+                <td>58,456.00</td>
+            </tr>
+        <tr>
+    <td>14</td>
+    <td><a>YoursTruly</a></td>
+                <td>58,405.00</td>
+            </tr>
+        <tr>
+    <td>15</td>
+    <td><a>ki11erboy</a></td>
+                <td>56,783.00</td>
+            </tr>
+        <tr>
+    <td>16</td>
+    <td><a>Greece</a></td>
+                <td>53,530.00</td>
+            </tr>
+        <tr>
+    <td>17</td>
+    <td><a>samorey</a></td>
+                <td>52,982.00</td>
+            </tr>
+        <tr>
+    <td>18</td>
+    <td><a>pipu</a></td>
+                <td>50,991.00</td>
+            </tr>
+        <tr>
+    <td>19</td>
+    <td><a>AlwaysAlone</a></td>
+                <td>50,220.00</td>
+            </tr>
+        <tr>
+    <td>20</td>
+    <td><a>rbest</a></td>
+                <td>47,941.00</td>
+            </tr>
+    </tbody>
+    </table>
   </div>
 </body> 
