--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container" id="pageContainer">
         <table cellspacing="0">
-            <h2 class="leaderboardType">Most Kills</h2>
+            <h2 class="leaderboardType">Loading...</h2>
             <thead>
                 <tr>
                     <th class="border-2px">Rank</th>
